Change chunks to raw ore. Generate block and item models.